--- a/index.html
+++ b/index.html
@@ -1,619 +1,187 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Shiny</title>
+    <title>What is a package?</title>
     <meta charset="utf-8" />
     <meta name="author" content="Megsie Siple" />
-    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
-    <link href="libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
-    <script src="libs/anchor-sections-1.0/anchor-sections.js"></script>
-    <link href="libs/font-awesome-5.3.1/css/fontawesome-all.min.css" rel="stylesheet" />
+    <meta name="date" content="2021-02-23" />
+    <link href="libs/remark-css/default.css" rel="stylesheet" />
+    <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Shiny
-## <br/>Quantfish woRkshop
+# What is a package?
 ### Megsie Siple
-### NOAA AFSC - RACE/GAP
-### 2020/12/08 (updated: 2020-12-08)
+### February 23, 2021
 
 ---
 
 
-class: center, middle
-
-# Hello! 
 
 
----
+background-image: url(https://www.ghibli.jp/gallery/ponyo023.jpg)
 
-class: center, middle
-![sempe](img/sempe.jpg)
+???
+
+Image credit: [Studio Ghibli](https://www.ghibli.jp/works/ponyo/#frame&amp;gid=1&amp;pid=23)
 
 ---
+# What is a package?
 
-# Marine science is like an orchestra
+- the fundamental unit of shareable code
 
-Each musician has areas where they’re very specialized, and areas where they are clueless
+
+```r
+# You install them like this:
+install.packages("x")
+
+# You load them like this:
+library("x")
+
+# ... and you can get help on them by using
+package?x
+# or
+help("x")
+```
+
+---
+# There are lots of ways to share code
+
+  - email it to your collaborators
 
 --
 
-What we do is a combination of highly technical skilled work and more whimsical multitasking/communicating
+  - put it on a github repo and go nuts
 
 --
 
-But we’re all working together to try to make a big, beautiful thing happen
-
+  - ...other ways?
+ 
 ---
-
-class: center, middle
-![os1](img/OSSCS1.jpg)
-&lt;sub&gt;&lt;sup&gt;Photo: Shaya Lyon&lt;/sup&gt;&lt;/sub&gt;
-
----
-
-class: center, middle
-![os2](img/OSSCS2.jpg)
-&lt;sub&gt;&lt;sup&gt;Photo: Shaya Lyon&lt;/sup&gt;&lt;/sub&gt;
-
----
-# How we deal with complexity in an orchestra setting: 
-
-### Clean it up
-
-### Use building blocks
-
-### Streamline our communications
-
-### People are the special ingredient
+# ...so why packages?
 
 --
 
-## &lt;mark&gt;This is the same in marine science! Shiny can help us with many of these tasks.&lt;/mark&gt;
-
-
----
-
-class: center, middle
-
-Shiny can be a little gnarly at first.
-
-![stinkspirit](https://i.gifer.com/TR2i.gif)
-
----
-
-# Outline
-
-1. `shiny` basics - when to use it, how to do it
+- sharing reasons: easy for others to download, use, and learn about
 
 --
 
-2. Working with data in Shiny apps
+- non-sharing reasons!
 
-  User uploads &amp; downloads
-  
-  Connecting to a database using `{DBI}` and `{pool}`
-  
-  Markdown reports
+--
+
+  - to organize your code
   
 --
 
-3. Lessons I learned from developing "mmBIET"
+  - to make robust code that is less likely to break (yay!)
 
---
 
-If you'd like to follow along, clone this directory and follow the examples!
-[https://github.com/mcsiple/shinyoverview](https://github.com/mcsiple/shinyoverview)
+---
+#Why do other people do it?
 
---
+.center[![megise](img/unnamed.png)]
 
-Available in the repo but optional for today:
+---
+# How do I do it?
 
-&gt; 4. *Translating your Shiny apps using `{shiny.18n}`*
+---
 
-&gt; 5. *Using Shiny to supercharge your remote teaching with `{learnr}`*
+.center[![allison](img/horst_usethis.jpg)]
+Image: Allison Horst
 
 
 ---
 
-# Why I learned Shiny
-
-![dolphins](img/Common_Striped_Boyd.jpg)
-.caption[
-**Image:** Jeff Moore
-]
-
----
-
-# Why I learned Shiny
-
-![mmbiet](img/mmbiet.gif)
-
----
-
-# What is Shiny?
-
-![whatisshiny](img/whatisshiny.png)
-
----
-
-# When is Shiny useful?
-
-When we want to make R code accessible outside of an R or RStudio environment. For example,
-
---
-
-- teaching a package
-
---
-
-- showing data visualizations to non-experts
-
---
-
-- streamlining certain code-intensive things (like database queries or visualizing bulky simulation outputs)
-
----
-
-# Starting a new Shiny app
-
-Install **shiny**:
+# Creating your first R package :)
 
 
 ```r
-install.packages("shiny")
+library(usethis)
+create_tidy_package("~/git_projects/mypackage")
 ```
 
-From The RStudio IDE, pick `New File -&gt; Shiny Web App`
-
-You can choose between single (**app.R**) or multiple files (**ui.R** and **server.R**)
-
-*Does it matter which one you choose?*
-&gt;Not really. Some people like the organization of having multiple files. But it really doesn't make a difference!
-
 ---
 
-# Each Shiny app has two components
+# Creating your first R package :)
 
-The **user interface (`ui`)** object dictates the appearance of the app. UI functions write HTML. For something to appear in your app, it needs to be in the UI.
+Once you `create_tidy_package()`, you will have a working directory that looks like this:
 
-***
-
-The **`server()` function** contains rendering expressions that create the objects to display. 
-
-
-
-
-
-The server function and UI object are passed to the `shinyApp()` function to create a Shiny app object.
+```
+-- R
+-- tests
+-- DESCRIPTION
+-- NAMESPACE
+-- cran-comments.md
+-- LICENSE.md
+-- README.Rmd
+-- README.md
+```
 
 ---
-
-# **ui.R**/server.R
-
-.pull-left[
-The ui looks like this:
+# Creating your first R package
+Set up a git repo for your package using `usethis`:
 
 
 ```r
-ui &lt;- fluidPage(
-    titlePanel("Old Faithful Geyser Data"),
-    sidebarLayout(
-        sidebarPanel(
-*            sliderInput("bins",
-                        "Number of bins:",
-                        min = 1,
-                        max = 50,
-                        value = 30)),
-        mainPanel(
-*           plotOutput("distPlot"))
-    )
-)
+use_git()
+use_github()
 ```
-]
-
-.pull-right[
-The corresponding ui looks like this:
-
-![basicui](img/basicui.png)
-]
-
----
-
-# **ui.R**/server.R
-
-The ui code contains the following information: 
-
-1. The UI type 
-  - `fluidPage()` puts elements in rows that can include columns 🍰
-  - `navbarPage()` has a navigation bar 📁
-
-2. Layout elements (`sidebarLayout()` etc.)
-
-3. Theme information (e.g., `{shinythemes}`)
 
 --
 
-4. Output objects (`plotOutput()`, etc.)
-
-5. Input objects (`sliderInput()`,`fileInput()` etc.)
-
-*Input objects link the user interface to the R code on the server.*
-
----
-
-# ui.R/**server.R**
-
-The server builds a list-like object called `output`. The contents of `output` are displayed in the ui.
-
+Once you've run the code above, all you have to do is run:
 
 ```r
-server &lt;- function(input, output) {
-    output$distPlot &lt;- renderPlot({
-        # generate bins based on input$bins from ui.R
-        x    &lt;- faithful[, 2]
-        bins &lt;- seq(min(x), max(x), length.out = input$bins + 1)
-        # draw the histogram with the specified number of bins
-        hist(x, breaks = bins, col = 'darkgray', border = 'white')
-    })
-}
+devtools::install_github("{github_username}/{packagename}")
 ```
 
+.... and you can install your R package on a computer! 
+
 ---
 
-# **ui.R**/**server.R**
+# The most basic developer toolbox
 
-The server builds a list-like object called `output`. `output` objects are displayed in the ui. Here is how they are linked:
+**Setup** 
 
-.pull-left[
+`{devtools}` 
 
-```r
-server &lt;- function(input, output) {
-*    output$distPlot &lt;- renderPlot({
-        # generate bins based on input$bins from ui.R
-        x    &lt;- faithful[, 2]
-        bins &lt;- seq(min(x), max(x), length.out = input$bins + 1)
-        # draw the histogram with the specified number of bins
-        hist(x, breaks = bins, col = 'darkgray', border = 'white')
-    })
-}
-```
-]
+`{usethis}` automates setup and other repetitive dev tasks
 
-.pull-right[
+`{roxygen2}` writes documentation and formats it the way you need 💋
 
-```r
-ui &lt;- fluidPage(
-    titlePanel("Old Faithful Geyser Data"),
-    sidebarLayout(
-        sidebarPanel(
-            sliderInput("bins",
-                        "Number of bins:",
-                        min = 1,
-                        max = 50,
-                        value = 30)),
-        mainPanel(
-*           plotOutput("distPlot"))
-    )
-)
-```
-]
+
+**Testing and checking** 
+
+`{testthat}` performs tests
+
+`{goodpractice}` automates checks for style AND content (e.g., outputs from `R CMD check`)
+
+
 ---
+# Interested in package development?
 
-# What's on the server?
-
-R code... mostly :)
+- Some fun RStudio::global talks on package development
 
 --
 
-![spirited](https://i.gifer.com/3QvT.gif)
+  - [You're Already Ready: Zen and the Art of Package Development](https://rstudio.com/resources/rstudioglobal-2021/youre-already-ready-zen-and-the-art-of-r-package-development/) by Malcolm Barrett
 
----
-
-# ui.R/**server.R**
-
-- **Rendering functions** (`renderPlot()`, `renderTable()`, etc.)
-  - Build a new object to display every time the inputs change
+  - [Make a package - Make some friends](https://rstudio.com/resources/rstudioglobal-2021/make-a-package-make-some-friends/) by Athanasia M. Mowinckel
 
 --
 
-- **Reactive expressions**
-  - `reactive()` caches reactive objects so you can access them later in the server logic -- very important!
-  - `eventReactive()` creates reactive objects but only when a specific input changes (e.g., a "Run Analysis!" button is clicked)
-  - lazy
-
---
-
-- **Observe expressions** change the ui based on input, e.g.,
-  - autopopulate default values in a form if a user has selected a default
-  - change the range for one input based on another input
-  - eager
+- Volunteer to be a reviewer for [rOpenSci](https://ropensci.org/software-review/)
 
 ---
 
-class: center, middle
+# Thank you!
 
-# 01_basics/app.R
+margaret.siple@noaa.gov
 
----
-
-class: center, middle, inverse
-
-# Getting data into and out of Shiny
-
-
----
-
-
-# Get data into a Shiny app
-
-Shiny can accept data from various file types. 
-
-You can get data into Shiny from:
-- a file the user uploads
-- a database
-- a persistent file packaged with your app
-
----
-
-# User uploads data
-If you want to design your app so that people can bring in their own data:
-
-Add a file upload input in the UI using the function `fileInput()`. In the `server` function, access the uploaded files via `input$mydata`:
-
-```r
-ui &lt;- fluidPage(
-  titlePanel("Uploading Files"),
-  sidebarLayout(
-    sidebarPanel(
-      # refer to input$mydata in the server code to reference this object:
-      fileInput("mydata", "Choose CSV File",
-                multiple = FALSE,
-                accept = c("text/csv",
-                         "text/comma-separated-values,text/plain",
-                         ".csv")),
-```
-
----
-
-# Connect to a database
-
-Shiny can access databases through the interface using the `{DBI}` and `{pool}` packages. 
-
-
-```r
-library(shiny)
-library(DBI)
-
-ui &lt;- fluidPage(
-  numericInput("nrows", "Enter the number of rows to display:", 5),
-  tableOutput("tbl")
-)
-
-server &lt;- function(input, output, session) {
-  output$tbl &lt;- renderTable({
-*    conn &lt;- dbConnect(
-*      drv = RMySQL::MySQL(),
-*      dbname = "shinydemo",
-*      host = "shiny-demo.csa7qlmguqrf.us-east-1.rds.amazonaws.com",
-*      username = "guest",
-*      password = "guest")
-    on.exit(dbDisconnect(conn), add = TRUE)
-    dbGetQuery(conn, paste0(
-      "SELECT * FROM City LIMIT ", input$nrows, ";"))
-  })
-}
-
-shinyApp(ui, server)
-```
-
----
-
-# Put the data on the server
-
-You can publish small data files that sit on the server with your app. You can load these data at the top of the app file (if server and ui are both located in **app.R**) or in the **ui.R** file if you're using separate files for ui and server.  
-
----
-
-# More on data storage in Shiny
-
-Dean Attali's [Persistent Data Storage With Shiny](https://daattali.com/shiny/persistent-data-storage/) app 
-
-[This](https://shiny.rstudio.com/articles/persistent-data-storage.html) blog post about data storage in Shiny (also by Dean Attali)
-
-RStudio's [best practices for dashboards](https://db.rstudio.com/best-practices/dashboards/) shows how to connect a `shinydashboard` to a database
-
----
-
-# Downloading from Shiny
-
-You can download data from a Shiny app using `downloadLink()` in the ui and `downloadHandler()` in the server:
-
-
-```r
-ui &lt;- fluidPage(
-  downloadLink("downloadData", "Download")
-)
-
-server &lt;- function(input, output) {
-  # Our dataset
-  data &lt;- mtcars
-
-  output$downloadData &lt;- downloadHandler(
-    filename = function() {
-      paste("data-", Sys.Date(), ".csv", sep="")
-    },
-    content = function(file) {
-      write.csv(data, file)
-    }
-  )
-}
-```
-
----
-
-# Downloading from Shiny
-
-- Download **CSV or txt files** from Shiny apps
-
---
-
-- Generate reports in Markdown that are knitted to **html** (details on how to do that [here](https://shiny.rstudio.com/articles/generating-reports.html))
-
---
-
-- You can also download **images** that have been generated in the app (e.g., download plots from the app)
-
-
----
-
-# Downloading HTML files from Shiny
-
-An HTML report consists of two pieces:
-
---
-
-1) A `report.Rmd` template file with a yaml header specifying the objects passed from Shiny
-
-
-```yaml
----
-title: "My Shiny app report"
-output: html_document
-params:
-  obj_to_pass1: NA
-  obj_to_pass2: NA
----
-```
---
-
-2) An object `output$report` in the server logic
-
-
-```r
-output$report &lt;- downloadHandler(
-    filename = "report.html",
-    content = function(file) {
-      tempReport &lt;- file.path(tempdir(), "report.Rmd")
-      file.copy("report.Rmd", tempReport, overwrite = TRUE)
-*      params &lt;- list(obj_to_pass1, obj_to_pass2)
-            rmarkdown::render(tempReport, output_file = file,
-                        params = params,
-                        envir = new.env(parent = globalenv()))
-```
-
----
-
-class: center, middle, inverse
-
-# 02_dataindataout/explore_ram/ui.R
-
----
-
-class: center, middle
-
-# Lessons I learned from developing a Shiny app
-
-![droplets](https://i.gifer.com/g5.gif)
-
----
-
-# UI is very important
-
-Designing a good ui is hard! And Shiny defaults are not the most intuitive / appealing / accessible version they can be.
-
---
-
-If you are designing an app for management, a good ui is essential.
-
---
-
-- my #1 tip: if you have time, pilot test with subject matter experts AND users
-  
---
-
-- check accessibility using the app's URL using the [Web Accessibility Evaluation (WAVE) Tool](https://wave.webaim.org/)
-
---
-
-- use UX resources if they are available!
-
---
-  
-- if your institution doesn't have UX resources, design pilot testing so that you get helpful feedback on UX:
-  - [18F Methods](https://methods.18f.gov/validate/) and [Maze](https://maze.design/guides/usability-testing/questions/) have great lists of testing questions and methods
-  - 18F Methods also has an [example agreement](https://methods.18f.gov/participant-agreement/) for testers
-  - Depending on the final format, places like  [UsabilityHub](https://usabilityhub.com/) have interfaces that will provide data on clicks and scrolling behavior when testing is remote
-  
-
----
-
-# You can publish Shiny apps!
-
-If you've put a lot of time into making a Shiny app, you should get credit! 
-The publication/credit avenues are unconventional for Shiny apps, but they DO exist.
-
-- Publish as a package in an open source software journal (e.g., JOSS) (check out the `{golem}` pkg for structuring your files and streamlining production) 📦
-
-- Publish code straight from GitHub with a DOI from Zenodo ( [here](https://www.rinproduction.com/en/posts/005-8-tips-for-a-production-ready-shiny-application/) are some good tips for preparing your app for production )
-
-- (for "just for fun" apps): submit your Shiny app to the RStudio [Shiny contest](https://community.rstudio.com/t/shiny-contest-2020-is-here/51002)
-&lt;!-- see if you can get some data on citation rates for JOSS vs zenodo github entry --&gt;
-
----
-
-class: center, middle
-
-# Having fun is good
-
-![duckspirits](https://i.gifer.com/SLcP.gif)
-
----
-
-class: center, middle
-
-![catapp](img/catapp.gif)
-
----
-
-class: center, middle
-
-![novels](img/novels.png)
-
----
-
-class: center, middle
-
-# Fin!
-
-### contact
-
-<i class="fas  fa-envelope "></i>: mcsiple@gmail.com
-<i class="fab  fa-twitter "></i>: @margaretsiple
-
-### **More Shiny resources:**
-
-[Mastering Shiny](https://mastering-shiny.org/) by Hadley Thee Wickham 
-
-Colin Fay has several [talks](https://colinfay.me/talks-publications/) on Shiny app workflow and production
-
-We love a [cheatsheet](https://shiny.rstudio.com/images/shiny-cheatsheet.pdf)
-
-
-### Some of my Shiny apps
-
-The [Marine Mammal Bycatch Impacts Exploration Tool](https://msiple.shinyapps.io/mammaltool/)
-
-[Novel-gazing](https://msiple.shinyapps.io/NovelGazingApp/) (for Goodreads users) 
-
-[Adopt Don't Shop](https://nsilbiger.shinyapps.io/AdoptDontShop/) (collaboration with Nyssa Silbiger)
-
-***
-
-Slides created using the R package [**xaringan**](https://github.com/yihui/xaringan).
+github: @mcsiple
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
